fix for second image in man-image on small devices

--- a/styles/media.less
+++ b/styles/media.less
@@ -43,8 +43,8 @@ html {
         position: relative;
         top: 2rem;
         margin-right: 9rem;
-        width: calc(@width-arrow / 1.4);
-        height: calc(@height-arrow / 1.4);
+        width: calc(@width-arrow / 1.6);
+        height: calc(@height-arrow / 1.6);
       }
     }
   }
